--- a/src/ClientApp/package.json
+++ b/src/ClientApp/package.json
@@ -24,6 +24,8 @@
     "@angular/cli": "~10.0.0",
     "@angular/compiler-cli": "~10.0.0",
     "@types/node": "~14.0.14",
+    "install": "^0.13.0",
+    "source-map-explorer": "^2.5.2",
     "typescript": "~3.9.5"
   }
 }
