--- a/src/appsettings.json
+++ b/src/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=phytime2021db;Trusted_Connection=True;",
+    "DefaultConnection": "Data Source=phytime2021server.database.windows.net;Initial Catalog=phytimedb2021;Persist Security Info=True;User ID=akim27;Password=852456qwe%",
     "TestsConnection": "https://opentdb.com/api.php?",
     "RssConnection": "https://psyjournals.ru/rss/"
   },
@@ -15,8 +15,7 @@
     "smtp": "smtp.yandex.ru",
     "port": "25",
     "email": "localhosttest@yandex.by",
-    "password": "748563akim",
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=phytime2021db;Trusted_Connection=True;"
+    "password": "748563akim"
   },
   "AllowedHosts": "*"
 }
